# utkarshpy

./: LICENSE  README.md  setup.cfg
.github/workflows/: ci.yml
src/utkarshpy/: cli.py
tests/: conftest.py  test_cli.py
