[metadata]
name = utkarshpy
version = 0.3.10
author = Utkarsh Gaikwad
author_email = gaikwadujg@gmail.com
description = CLI tool to automate Python project setup with GitHub integration and VS Code configuration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/utkarshg1/utkarshpy
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    uv

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    utkarshpy = utkarshpy.cli:main
